apps/canary/version-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
spec:
  ingressClassName: nginx
  rules:
  - host: canary-demo.gatekeeper.argoproj.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-gatekeeper-v3
            port:
              name: http
  - host: canary-demo.one.argoproj.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-one-v3
            port:
              name: http
  - host: canary-demo.two.argoproj.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stable-two-v3
              port:
                name: http
  - host: canary-demo.three.argoproj.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stable-three-v3
              port:
                name: http
